--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           python lantern --help
 
-  security:
+  deps:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -61,14 +61,9 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Check dependencies for vulnerabilities
         run: |
           python -m pip install --upgrade pip
-          pip install bandit safety
-
-      - name: Run Bandit security scan
-        run: bandit -r core/ modules/ -ll --skip B101
-
-      - name: Check dependencies for vulnerabilities
-        run: safety check -r requirements.txt --ignore 70612
+          pip install safety
+          safety check -r requirements.txt --ignore 70612
         continue-on-error: true
